2018-07-24  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] Stop crashing in lastResortFallbackFont()
        https://bugs.webkit.org/show_bug.cgi?id=187936

        Reviewed by Jon Lee.

        CoreText can get into a state where both Times and Lucida Grande are inaccessible.
        Instead of crashing, we should use the real LastResort, which is backed by a section
        in the .rodata of the CoreText dylib, and as such should always exist.

        * platform/graphics/FontCache.cpp:
        (WebCore::FontCache::fontForFamily):
        * platform/graphics/cocoa/FontCacheCoreText.cpp:
        (WebCore::FontCache::lastResortFallbackFont):

2018-07-24  Daniel Bates  <dabates@apple.com>

        Cannot view PDF's on my.gov.au: "Refused to load https://my.gov.au/attachment/viewAttachment because it
        appears in neither the object-src directive nor the default-src directive of the Content Security Policy"
        https://bugs.webkit.org/show_bug.cgi?id=187870
        <rdar://problem/41190880>

        Reviewed by Dean Jackson.

        Fixes an issue where opening attachments on my.gov.au would show a "Blocked Plug-in" message.

        Opening an attachment on my.gov.au opens a same-origin plugin document in a child window. Currently
        same-origin plugin documents inherit their CSP policy from their opener. If the opener's CSP policy
        disallows embedding plugins then the plugin document would be blocked from loading a plugin. For now
        we relax the inheritance model such that we only inherit the plugin-types and report-uri directives
        from the opener.

        Developers that want to block plugin content from being loaded in a same-origin child window must now
        serve such plugin content with a CSP policy that includes "object-src 'none'". This matches the behavior
        described in the second Note in section object-src of the CSP 3 spec: <https://w3c.github.io/webappsec-csp/#directive-object-src>